--- a/src/http/views/resetRequestSent.hbs
+++ b/src/http/views/resetRequestSent.hbs
@@ -2,7 +2,7 @@
     <h2 class='page-title'>Check Your Email</h2>
     <div class='section-container'>
         <p class='text-lg mb-4'>
-            If an account with that email exists, we've sent a password reset link.
+            {{ message }}
         </p>
         <p class='mb-4'>
             Please check your inbox and click the link to reset your password.
